# iw-algo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.json  pyproject.toml  requirements.txt  tester.py
.streamlit/: config.toml
data/: IW_Groups.csv  README.md
libraries/: iw_handler.py
