[tool.poetry]
name = "iw-algo"
version = "0.1.0"
description = ""
authors = ["artur <git-ar.houze@aleeas.com>"]
license = "APGL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
